--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "author": "moonstar-x",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/opus": "^0.3.3",
-    "@greencoast/logger": "^1.0.1",
-    "axios": "^0.21.0",
-    "discord.js": "^12.4.1",
-    "fs-extra": "^9.0.1",
-    "google-tts-api": "^0.0.5"
+    "@discordjs/opus": "^0.3.2",
+    "avconv": "^3.1.0",
+    "axios": "^0.19.0",
+    "discord.js": "^12.2.0",
+    "ffmpeg": "0.0.4",
+    "fs-extra": "^8.1.0",
+    "google-tts-api": "0.0.4",
+    "logger": "github:moonstar-x/logger",
+    "prism-media": "^1.2.2"
   },
   "bugs": {
     "url": "https://github.com/moonstar-x/discord-tts-bot/issues"
